Wrap in container; add better adaptive scaling; fix infinite left-margin

--- a/src/main/webapp/web/css/record.css
+++ b/src/main/webapp/web/css/record.css
@@ -102,3 +102,9 @@
         font-size: 16px;
     }
 }
+
+@media (min-width: 992px) {
+    .no-margin-left-md {
+        margin-left: 0;
+    }
+}
